--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,8 @@ a {
 }
 .section1 {
   background-color: #2f303a;
+  background-image:linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  url(../img/hero-bg.jpg);
   color: rgba(255, 255, 255, 1);
   padding: 200px 0px;
   
@@ -135,11 +137,11 @@ color: #212121;
 }
 .about-list {
 display: flex;
-     padding-left: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    list-style: none;
-        gap: 30px;
+padding-left: 0;
+margin-top: 0;
+margin-bottom: 0;
+list-style: none;
+gap: 30px;
 }
  
 
@@ -172,6 +174,7 @@ line-height: 1.87;
 letter-spacing: 0.03em;
 color: #757575;
 }
+
 .elements-item {
 width: calc((100% - 60px) /3);
 border: 1px solid #eeeeee;
@@ -273,7 +276,33 @@ line-height: 1.18;
 text-align: center;
 letter-spacing: 0.03em;
 color: #757575;
+margin-bottom: 16px;
 }
+.team-soc-link {
+width: 44px;
+height: 44px;
+border-radius: 50%; 
+background-color:transparent ;
+display: flex;
+align-items: center;
+justify-content: center;
+ }
+ .team-soc-link:hover,
+ .team-soc-link:focus{ 
+  background-color: #2196f3;
+ }
+  .team-soc-link:hover .team-soc-icon,
+ .team-soc-link:focus .team-soc-icon{ 
+  fill: #ffffff;
+ }
+ .team-soc{
+display: flex;
+justify-content: center;
+gap: 10px;
+  }
+  .team-soc-icon{
+fill:#AFB1B8;
+  }
 .contacts {
 color: #757575;
   }
