--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,8 @@ a {
   url(../img/hero-bg.jpg);
   color: rgba(255, 255, 255, 1);
   padding: 200px 0px;
+  max-width: 1600px;
+  margin: auto;
   
  }
 
@@ -253,6 +255,8 @@ margin-bottom: 50px;
 padding-top: 94px;
 padding-bottom: 94px;
 background: #F5F4FA;
+max-width: 1600px;
+margin: auto;
   }
 .team-member{
 font-weight: 500;
@@ -306,6 +310,21 @@ fill:#AFB1B8;
 .contacts {
 color: #757575;
   }
+.footer .footer-wrap{
+display: flex;
+gap: 70px;
+align-items: baseline;
+}
+.footer-invite-title {
+margin-top: 0;
+margin-bottom: 20px;
+color: #ffffff;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+  }
+
 .navList a:hover,
 .navList a:focus,
 .contactsList a:hover,
@@ -316,6 +335,8 @@ color: #757575;
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  max-width: 1600px;
+  margin: auto;
 }
 
 .address {
@@ -333,7 +354,32 @@ color: #757575;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
+  }
+.footer-soc-link {
+width: 44px;
+height: 44px;
+border-radius: 50%; 
+background: rgba(255, 255, 255, 0.1);
+display: flex;
+align-items: center;
+justify-content: center;
+ }
+ .footer-soc-link:hover,
+ .footer-soc-link:focus{ 
+  background-color: #2196f3;
+ }
+  .footer-soc-link:hover .team-soc-icon,
+ .footer-soc-link:focus .team-soc-icon{ 
+  fill: #ffffff;
+ }
+ .footer-soc{
+display: flex;
+justify-content: center;
+gap: 10px;
+  }
+  .footer-soc-icon{
+fill:#FFFFFF;
+  }
 p, h1,h2,h3,h4,h5,h6 {
   margin: 0;
 }
