--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ a {
 }
 .header .container{
  display: flex;
+ align-items: center;
 }
 .header-contacts{
  margin-left: auto;
@@ -210,7 +211,10 @@ margin-left: auto;
 margin-right: auto;
 max-width: 696px;
 }
-
+.about-list-items{
+ max-width: 270px;
+ margin-right: 30px;
+}
 .about-title {
 font-weight: 700;
 font-size: 14px;
@@ -354,7 +358,11 @@ text-transform: uppercase;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  margin-top: 20px;
   }
+  .footer-adress-item {
+ margin-bottom: 9px;
+   }
 .footer-soc-link {
 width: 44px;
 height: 44px;
